--- a/views/ft_mypage.ejs
+++ b/views/ft_mypage.ejs
@@ -9,6 +9,7 @@
     <script src = "/javascripts/ft_mypage.js"></script>
     <link rel = 'stylesheet' href='/stylesheets/new_mypage.css'/></link>
     <link rel = 'stylesheet' href='/stylesheets/main.css'/></link>
+    <!-- <link rel = 'stylesheet' href='/stylesheets/new_mypage2.css'/></link> -->
     </head>
   <body ondragstart="return false">
     <div id="wrapper">
@@ -19,7 +20,7 @@
         <div id="z">
         </div>
         <div id="div_login">
-          <p id="first_join"><a href = "/first_test/logout" style="text-decoration:none;color: #00B7FF;">LOGOUT</a></p>
+          <p id="first_join1"><a href = "/first_test/logout" style="text-decoration:none;color: #00B7FF;">LOGOUT</a></p>
           <%
           if(mailflag.length == 0){
             %>
@@ -59,7 +60,7 @@
     </div>
             <div style="margin-top : -150px;">
               <p id="mypage_logo">MY<br>PAGE</p>
-              <div id="rectangle_2">
+              <div id="rectangle_2_2">
               </div>
 
                <div id="rectangle_5">
@@ -83,7 +84,7 @@
                         <%=oneItem.phoneopen%>
                       </p>
 
-                      <p id="change"><a href = '/first_test/updatebefore' style="text-decoration:none;">수정 </a></p>
+                      <p id="change1"><a href = '/first_test/updatebefore' style="text-decoration:none;">수정 </a></p>
                       <p id="leave"><a href ='/first_test/leave1' style="text-decoration:none;">탈퇴</a></p>
                     </div>
                     <div id="rectangle_2_1">
