--- a/public/stylesheets/main.css
+++ b/public/stylesheets/main.css
@@ -1,5 +1,5 @@
 
-body{padding:50px;font:14px "Lucida Grande",Helvetica,Arial,sans-serif;}
+body{padding:50px;font:14px "Lucida Grande",Helvetica,Arial,sans-serif;;background: linear-gradient(white 6%, rgb(193,215,222) 94%);}
 a{color: #00B7FF;}
 #wrapper
 {
@@ -44,7 +44,7 @@ a{color: #00B7FF;}
   background-color: rgb(75, 108, 138);
   left: 42px;
   top: 189px;
-  width: 1020px;
+  width: 100%;
   height: 4px;
   z-index: 6;
 }
