--- a/public/stylesheets/main.css
+++ b/public/stylesheets/main.css
@@ -1,5 +1,5 @@
 
-body{padding:50px;font:14px "Lucida Grande",Helvetica,Arial,sans-serif;;background: linear-gradient(white 6%, rgb(193,215,222) 94%);}
+body{padding : 50px;font:14px "Lucida Grande",Helvetica,Arial,sans-serif;background: linear-gradient(white 6%, rgb(193,215,222) 94%);}
 a{color: #00B7FF;}
 #wrapper
 {
