--- a/views/ft_update1.ejs
+++ b/views/ft_update1.ejs
@@ -11,7 +11,7 @@
         <script src = "/javascripts/ft_updateinfo.js"></script>
         <script type="text/javascript"></script>
   </head>
-  <body ondragstart="return false">
+  <body ondragstart="return false" style="background: linear-gradient(white 6%, rgb(193,215,222) 94%);">
     <div id="wrapper">
       <div id="d3"><p id="p_style2">비밀번호</p>
       </div>
