--- a/views/ft_updateinfo.ejs
+++ b/views/ft_updateinfo.ejs
@@ -7,7 +7,7 @@
      <meta name=”viewport” content=”width=device-width, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0, user-scalable=no” />
     <link rel = 'stylesheet' href='/stylesheets/new_mypage_revise.css'/><script></script>
   </head>
-   <body ondragstart="return false">
+   <body ondragstart="return false" style="background: linear-gradient(white 6%, rgb(193,215,222) 94%);">
       <div id="wrapper">
         <div id="first_area">
              <div id="div_logo">
