--- a/views/mypage.ejs
+++ b/views/mypage.ejs
@@ -336,7 +336,7 @@
     </style>
 
   </head>
-  <body>
+  <body style="background: linear-gradient(white 6%, rgb(193,215,222) 94%);">
       <div id="top_form">
         <div id ="left_img"><img src = "images/camera.PNG"></div>
         <div id="top_name"><a>instagram</a></div>
