--- a/views/ft_findID.ejs
+++ b/views/ft_findID.ejs
@@ -20,7 +20,7 @@
 </script>-->
 </head>
 
-<body ondragstart="return false">
+<body ondragstart="return false" style="background: linear-gradient(white 6%, rgb(193,215,222) 94%);">
   <div id="wrapper">
     <div id="first_area">
       <div id="div_logo">
