--- a/views/ft_join.ejs
+++ b/views/ft_join.ejs
@@ -10,7 +10,7 @@
   <script src = "/javascripts/ft_join.js"></script>
   <link rel = 'stylesheet' href='/stylesheets/join.css'/>
 </head>
-<body>
+<body style="background: linear-gradient(white 6%, rgb(193,215,222) 94%);"> 
   <h1><a href = '/first_test'>강의교환 first_test </a></h1>
   <h2> JOIN </h2>
   <p> Email    : <input type = "text" name = "email" id = "join_email"></p>
