--- a/views/ft_matching.ejs
+++ b/views/ft_matching.ejs
@@ -49,7 +49,7 @@
       }
       </style>
   </head>
-  <body style=" width: 1200px; height: 768px; position : relative;">
+  <body style=" width: 1200px; height: 768px; position : relative;" >
     <div id="line_1">
        </div>
        <div id="first_area">
@@ -57,7 +57,7 @@
          <p id="first_FAQ">FAQ</p><p id="first_join">회원가입</p><p id="first_login">로그인</p><p id="mypage_mention">mypage</p>
          <i class="glyphicon glyphicon-envelope" style="position : absolute; top : 15px; left : 900px; font-size : 16px;"></i>
        </div>
-       <p id="mention1">판매/구입</p>
+       <p id="mention1">버림/구함</p>
        <div id="small_rectangle"></div>
        <p id="mention2">교환</p>
        <div>
