--- a/views/ft_mypage.ejs
+++ b/views/ft_mypage.ejs
@@ -11,7 +11,7 @@
     <link rel = 'stylesheet' href='/stylesheets/main.css'/></link>
     <!-- <link rel = 'stylesheet' href='/stylesheets/new_mypage2.css'/></link> -->
     </head>
-  <body ondragstart="return false">
+  <body ondragstart="return false" style="background: linear-gradient(white 6%, rgb(193,215,222) 94%);">
     <div id="wrapper">
       <div id="first_area">
         <div id="div_logo">
