--- a/views/ft_findID_success.ejs
+++ b/views/ft_findID_success.ejs
@@ -22,7 +22,7 @@
       window.history.replaceState({}, document.title, clean_uri,clean);
       </script>
 </head>
-<body style="background: linear-gradient(white 6%, rgb(193,215,222) 94%);">
+<body style="background-color : white;">
   <%
     if(!result[0]){
       %>
