--- a/views/ft_findpwd_success.ejs
+++ b/views/ft_findpwd_success.ejs
@@ -16,7 +16,7 @@
  window.history.replaceState({}, document.title, cleanUri);
 </script>
 </head>
-<body style="background: linear-gradient(white 6%, rgb(193,215,222) 94%);">
+<body style="background-color : white;">
   <%
     if(!result[0]){
       %>
