--- a/views/ft_leave3.ejs
+++ b/views/ft_leave3.ejs
@@ -25,7 +25,7 @@
         </div>
         <div id="div_login">
           <% if(!session) { %>
-            <p id="first_join"><a href = "/first_test/join1" style="text-decoration:none;">회원가입</a></p><p id="first_login"><a href = "/first_test/login" style="text-decoration:none;">로그인</a></p>
+            <p id="first_join"><a href = "/first_test/join1" style="text-decoration:none;">JOIN</a></p><p id="first_login"><a href = "/first_test/login" style="text-decoration:none;">LOGIN</a></p>
             <% } %>
 
 
