--- a/views/ft_findID.ejs
+++ b/views/ft_findID.ejs
@@ -29,7 +29,7 @@
       <div id="z">
       </div>
       <div id="div_login">
-        <p id="first_join"><a href = "/first_test/join1" style="text-decoration:none;" >회원가입</a></p><p id="first_login"><a href = "/first_test/login" style="text-decoration:none;">로그인</a></p>
+        <p id="first_join"><a href = "/first_test/join1" style="text-decoration:none;" >JOIN</a></p><p id="first_login"><a href = "/first_test/login" style="text-decoration:none;">LOGIN</a></p>
         <div class = "modal" id= "MailBoxModal" style="display:none;" >
         <div class = "modal-dialog">
         <div class = "modal-content">
